samples/_failures_safe/1761004968_1eee03_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5877f6af.c: In function ‘main’:
./samples/SAFE/__tmp_5877f6af.c:135:53: error: missing terminating " character
  135 |     add_log_entry(&analyzer, "2024-01-15 10:31:10", "DEBUG
      |                                                     ^~~~~~
./samples/SAFE/__tmp_5877f6af.c:135:5: error: expected expression at end of input
  135 |     add_log_entry(&analyzer, "2024-01-15 10:31:10", "DEBUG
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_5877f6af.c:135:5: error: too few arguments to function ‘add_log_entry’
./samples/SAFE/__tmp_5877f6af.c:53:5: note: declared here
   53 | int add_log_entry(struct LogAnalyzer *analyzer, const char *timestamp, const char *level, const char *message) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_5877f6af.c:135:5: error: expected declaration or statement at end of input
  135 |     add_log_entry(&analyzer, "2024-01-15 10:31:10", "DEBUG
      |     ^~~~~~~~~~~~~
